Closed Bug 1289005 Opened 8 years ago Closed 8 years ago

Crash in mozilla::gl::GetBytesPerTexel

Categories

(Core :: Graphics, defect)

Unspecified
Android
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: n.nethercote, Assigned: jnicol)

References

Details

(Keywords: crash, topcrash-android-armv7, Whiteboard: [gfx-noted])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-5b23d907-3ae8-4798-81f0-b66cc2160725.
=============================================================

New Fennec #1 topcrash. First showed up in Nightly 20160722030235, where it occurred 28 times, which is a *lot* for Fennec.

It's a MOZ_CRASH() in GetBytesPerTexel(). Looks like some kind of case isn't being handled correctly. Bug 1164027 is almost certainly the cause.

jnicol, can you please investigate?
Flags: needinfo?(jnicol)
Looks like something uses some texture formats which GLUploadHelpers.cpp code doesn't, and now this function is being used in more places it needs to be expanded to handle those cases.

All of the reports are crashing on type=GL_UNSIGNED_BYTE and format=GL_BGRA_EXT. I'll add that to the function. And I think we should remove the MOZ_CRASH. The gfxCriticalError will still assert in debug builds.
Flags: needinfo?(jnicol)
Assignee: nobody → jnicol
Also, do not MOZ_CRASH for unknown types and formats. The
gfxCriticalError will assert in debug builds and provide the values of
unknown types or formats.

Review commit: https://reviewboard.mozilla.org/r/66820/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/66820/
Attachment #8774336 - Flags: review?(snorp)
This crash also appears in the WebRTC Autophone job, see for instance: https://treeherder.mozilla.org/#/jobs?repo=mozilla-central&revision=e28e856b987380f55d699092f11f6997378f79a6&selectedJob=4430368

You can create a try run for Autophone like this one if you want to test your fix: https://treeherder.mozilla.org/#/jobs?repo=try&revision=2b7b4cdd4f5a80e0d7dfde4e61b54a1bc9e8c895
Patch tested locally on a crashing url, can confirm it works. Let's check this in.
Keywords: checkin-needed
Thank you for the fast fix.
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/5af04e12e860
Handle GL_BGRA_EXT in GetBytesPerTexel; r=snorp
Keywords: checkin-needed
landed, will see that i retrigger nightlys to get this fix out to the nightly tester community when this patch hits m-c
Flags: needinfo?(cbook)
https://hg.mozilla.org/mozilla-central/rev/5af04e12e860
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
0 crashes reported yet with a build after 2016-07-26.
Whiteboard: [gfx-noted]
Flags: needinfo?(cbook)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: