Bug 1289005 - Handle GL_BGRA_EXT in GetBytesPerTexel; r=snorp

Also, do not MOZ_CRASH for unknown types and formats. The
gfxCriticalError will assert in debug builds and provide the values of
unknown types or formats.

MozReview-Commit-ID: 46sWBdOdqiE